--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   get_storage: ^2.0.3
   alarm: ^0.0.5
   android_alarm_manager_plus: ^2.1.0
-  new_version: ^0.3.1
+  new_version_plus: ^0.0.9
   step_circle_progressbar: ^0.1.3
   circle_progress_bar: ^0.1.2
   flutter_local_notifications: ^13.0.0
